syntax = "proto3";
package proto;
option go_package = ".;proto";

import "google/protobuf/empty.proto";
import "session.proto";

service Storage {
    // Delete the value of a specific key
    rpc StorageDelete(StorageDeleteRequest) returns (google.protobuf.Empty);

    // Check in storage to determine if a key has a value
    rpc StorageExists(StorageExistsRequest) returns (StorageExistsResponse);
        
    // Read the value of a specific storage key
    rpc StorageRead(StorageReadRequest) returns (StorageReadResponse);
        
    // Write the value of a key to storage
    rpc StorageWrite(StorageWriteRequest) returns (google.protobuf.Empty);
}

message StorageExistsRequest {
    Session session = 1;
    string key = 2;
}

message StorageExistsResponse {
    bool exists = 1;
}

message StorageReadRequest {
    Session session = 1;
    string key = 2;
}

message StorageReadResponse {
    string value = 1;
}

message StorageDeleteRequest {
    Session session = 1;
    string key = 2;
}

message StorageWriteRequest {
    Session session = 1;
    string key = 2;
    string value = 3;
}